submit and next buttons working

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <label for="choice4">USA</label>
         </div> -->
 
-        <button class="btn-submit">Submit</button>
+        <button class=" btn btn-submit">Submit</button>
+        <button class="btn btn-next">Next</button>
 
 
         <p class="score">Score:
